# ChangeLog for dev-python/PyQt4
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*PyQt4-4.6.2_pre20091108 (09 Nov 2009)

  09 Nov 2009; Markos Chandras <hwoarang@gentoo.org>
  +PyQt4-4.6.2_pre20091108.ebuild:
  Bug fixing snapshots with various important fixes. Quoting from upstream
  log:

  Backported the following bug fixes from v4.7.
  Fixed a pyuic bug handling non-translatable strings containing a
  backslash.
  Removed a use of basestring in pyuic.
  Fixed QObject.findChild() and QObject.findChildren() which were doing bad
  things with the ownership of objects they were finding.
  Fixed a regression in the handling of QObject.destroyed() being connected
  via
  a proxy that meant that the proxied callable never got invoked because the
  proxy was being destroyed too soon.
  Specified v1 of the QVariant API for the QDataStream << and >> operators
  which
  were breaking the puzzle.py examples.
  Fixed a bug in the handling of unknown Qt property or signal.

*PyQt4-4.7_pre20091106 (08 Nov 2009)

  08 Nov 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.7_pre20091105.ebuild, +PyQt4-4.7_pre20091106.ebuild:
  New snapshot. Remove old

*PyQt4-4.7_pre20091105 (06 Nov 2009)

  06 Nov 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.7_pre20091028.ebuild, +PyQt4-4.7_pre20091105.ebuild:
  New snapshot. Remove old

  31 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  PyQt4-4.7_pre20091028.ebuild:
  Fix compilation issue due to wrong popd usage

  31 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  PyQt4-4.7_pre20091028.ebuild:
  Minor fix to handle new project names

*PyQt4-4.7_pre20091028 (29 Oct 2009)

  29 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.7_pre20091026.ebuild, +PyQt4-4.7_pre20091028.ebuild:
  New snapshot. Remove old

  28 Oct 2009; Markos Chandras <hwoarang@gentoo.org> -PyQt4-4.6.1.ebuild:
  On tree

*PyQt4-4.7_pre20091026 (27 Oct 2009)

  27 Oct 2009; Markos Chandras <hwoarang@gentoo.org>