@@ -1,7 +1,5 @@
 AUX configure.py.patch 1409 RMD160 f8a2b0c92fc53756679cff39d366b34cfb5b6d72 SHA1 c2cb0478de7d4f29c4db656f824b4dfce742209d SHA256 c80ecf0323ba47e14ac7e9941cf640a6ae552ad558001984097a8a33861028bd
-DIST PyQt-x11-gpl-4.6.2-snapshot-20091108.tar.gz 6849782 RMD160 f15de8b6cae4a6030491c3e05321e78bfba19ff3 SHA1 90b5ae9d7253e01786a9b1c1d8f4f235d9aae8a3 SHA256 80047f4d833a7441f28e4adb678511b7c297ce21e8736a0226105610b8412de0
-DIST PyQt-x11-gpl-4.7-snapshot-20091106.tar.gz 1309704 RMD160 42c69c81c0dfb8c0141ba89896d7fbd4272e1a83 SHA1 9fffcca1040372501a434c43b604aa219b06ba0d SHA256 b9a2811dcced07d68a2fdf9ea0b82de7b30c1add40e22661ef71db2369d04e01
-EBUILD PyQt4-4.6.2_pre20091108.ebuild 3860 RMD160 731339b8f4d995b01f71589aff4616970819ecf7 SHA1 182d808563b3c8eb996ac626bb0360c303335e12 SHA256 35dc057ca6a1dd85f083e43e825151629e32429a581f929996194224888b6c0c
-EBUILD PyQt4-4.7_pre20091106.ebuild 3860 RMD160 731339b8f4d995b01f71589aff4616970819ecf7 SHA1 182d808563b3c8eb996ac626bb0360c303335e12 SHA256 35dc057ca6a1dd85f083e43e825151629e32429a581f929996194224888b6c0c
-MISC ChangeLog 13667 RMD160 caad14aef0977819f1d36497e46c3647a86e85f3 SHA1 cefadf882923d96ce80a0aa576a9a698d37a79d9 SHA256 55940545446b0d17469fd7114cc5ec45d633eab986beaaf3083ba9d7a3948469
+DIST PyQt-x11-gpl-4.7-snapshot-20091118.tar.gz 1820668 RMD160 302fb33459b3cc690be39783cb6e1f41227522a9 SHA1 3107aadb99a50017ca4280ca748799d601d76dd3 SHA256 10b77d0270805413219db2a6eb4eb12ae8cd3ab23161888f58f575caaf7b3d32
+EBUILD PyQt4-4.7_pre20091118.ebuild 3860 RMD160 731339b8f4d995b01f71589aff4616970819ecf7 SHA1 182d808563b3c8eb996ac626bb0360c303335e12 SHA256 35dc057ca6a1dd85f083e43e825151629e32429a581f929996194224888b6c0c
+MISC ChangeLog 13901 RMD160 7db61a8a2afe6245fc7489d60e9d12d354bdf7fa SHA1 f989806ac5e62f50b3d3f3ffe4f97da8d582ebff SHA256 54c9fd584c23ae7548ce460dec9e26dea2646c9f8b7213743c1fe84bb0655a08
 MISC metadata.xml 784 RMD160 f98352d1efdc46ce85fa86a251e0334953953171 SHA1 8dcecbf0e4091ab3b8387523ec06a602a01821a3 SHA256 dd8004eeba543eba4dbc1f4ab6a3693c12d1185e9b33d028efd495f80ba18476
