@@ -1,6 +1,4 @@
-DIST sip-4.10-snapshot-20091107.tar.gz 662704 RMD160 533c1317c4b3a9b3162ee60fa4135beb191fc0d4 SHA1 6f08692725e0e1c217778320879dc1a71efdee43 SHA256 da83292f221c0c56f6700467640c4bdb2206b9c6313ee1519d0bfdae75655bdb
-DIST sip-4.9.2-snapshot-20091108.tar.gz 649698 RMD160 242b38d93abd03b62ce3ed06d8add2310967e304 SHA1 0b9f5fe5de7a43704ab6bce6825b41e029376638 SHA256 8dd105e7512bdae6cd94618d374250a5cc13d25019b4c13af179672984d9b06f
-EBUILD sip-4.10_pre20091107.ebuild 1475 RMD160 9b922efaadab2f180cbb1cf94cdbf27141671f8f SHA1 a15156ad2388722930384fa820253cf8ee110faa SHA256 45171b1e34f95605195e49246afac658783d66b15fb5227c297d28150a04d3cb
-EBUILD sip-4.9.2_pre20091108.ebuild 1475 RMD160 9b922efaadab2f180cbb1cf94cdbf27141671f8f SHA1 a15156ad2388722930384fa820253cf8ee110faa SHA256 45171b1e34f95605195e49246afac658783d66b15fb5227c297d28150a04d3cb
-MISC ChangeLog 6525 RMD160 40a7dafe0b90d874cbf42b42fbbcf83b0c7d91b4 SHA1 4c08eb4b9d12f229d6bac8b5646daa888e919f16 SHA256 b24494a049572b0b2e99bbb71dc90bfd65767b8730383ba5f9a3da8da3e4a701
+DIST sip-4.10-snapshot-20091117.tar.gz 668795 RMD160 58f600987f2de40829a2a659487579a5c615e3b4 SHA1 2e7703b73e0b08b086d75966ffac83f9b269c86d SHA256 5972beffbedef9111f3357bac5a57d07680cdbfa6d90f2c158ea6c4a10111534
+EBUILD sip-4.10_pre20091117.ebuild 1475 RMD160 9b922efaadab2f180cbb1cf94cdbf27141671f8f SHA1 a15156ad2388722930384fa820253cf8ee110faa SHA256 45171b1e34f95605195e49246afac658783d66b15fb5227c297d28150a04d3cb
+MISC ChangeLog 6755 RMD160 cf3ee7138fa6f0883b26d2a64d453cbadfe29108 SHA1 76153911b8e356f7eff3f0272129877e100e016d SHA256 dd65a22bfb3c3766c289618877a786bcbe0eb991595c47f51313ad48d7b05e8f
 MISC metadata.xml 175 RMD160 74ecde8b999da503a2733b49ed618d5d50d26476 SHA1 ec86e15b85c2bc4429ad67bb52238b44f2b16cbd SHA256 26b18db06b1665422af8905fb70f8f48920a048578172d62b9689e273ee39a2d
