@@ -2,12 +2,10 @@
 # Add your name and the date, as well as an explanation for the mask
 # Make sure the atoms you add are valid!
 
-# Markos Chandras <hwoarang@gentoo.org> (08 Nov 2009)
+# Markos Chandras <hwoarang@gentoo.org> (20 Nov 2009)
 # Snapshots are not for everybody :)
 =dev-python/PyQt4-4.7_pre*
-=dev-python/PyQt4-4.6.2_pre*
 =dev-python/sip-4.10_pre*
-=dev-python/sip-4.9.2_pre*
 =dev-python/qscintilla-python-2.4.1_pre*
 =x11-libs/qscintilla-2.4.1_pre*
 
